fix sizing/alignment issue on firefox

--- a/assets/css/global.styl
+++ b/assets/css/global.styl
@@ -72,7 +72,7 @@ tr.header
 tr.app
     text-align right
     td.maqam_list
-        width 380px
+        width 360px
         vertical-align top
         direction rtl
         text-align right
